--- a/index.html
+++ b/index.html
@@ -44,14 +44,13 @@
 
 	<div id="second-page">
 		<div class="row">
-			<div class="col-md-2 col-sm-4 col-sm-offset-1 hidden-xs">
+			<div class="col-sm-2 col-sm-offset-1 hidden-xs">
 				<img class="img-responsive logo" src="img/logo.png">
 			</div>
+			<div class="col-md-12 col-sm-6 col-xs-12 text-center"><span id="counter">0</span> seconds</div>
 		</div>
 
 		<div class="container">
-			<p class="text-center"><span id="counter">0</span> seconds</p>
-
 			<div id="card-panel">
 			</div>
 		</div>
