--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<div class="col-sm-2 col-sm-offset-1 hidden-xs">
 				<img class="img-responsive logo" src="img/logo.png">
 			</div>
-			<div class="col-md-12 col-sm-6 col-xs-12 text-center"><span id="counter">0</span> seconds</div>
+			<div class="col-md-12 col-sm-6 col-xs-12 text-center"><span id="counter">0</span>seconds</div>
 		</div>
 
 		<div class="container">
@@ -57,6 +57,19 @@
 	</div>
 
 	<div id="third-page">
+		<div class="row">
+			<div class="col-sm-2 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+				<img class="img-responsive logo" src="img/logo.png">
+			</div>
+		</div>
+
+		<div class="container">
+			<p class="text-center" id="name-congra">恭喜<span id="show-name">XXX</span></p>
+			<p class="text-center" id="finish-mission">以<span id="result-second">25</span>秒完成任務</p>
+			<p class="text-center" id="are-matchmaker">記憶達人!&nbsp;&nbsp;You are the matchmaker!</p>
+			<p class="text-center" id="back-to-page">回粉絲專頁參與抽獎!</p>
+			<p class="text-center" id="page-link"><a href="https://www.facebook.com/nctufl105/"><img id="FB-img" src="img/FB.png">交大外文105級畢業公演《緣來愛上你》</p></a>
+		</div>
 	</div>
 
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
@@ -68,9 +81,18 @@
 		$(document).ready(function() {
 			$('#second-page, #third-page').hide()
 			cardGame.prepare()
+			$('#player-name').tooltip({
+				title: "請輸入您的名字",
+				trigger: "manual"
+			})
 
 			$('#name-form').submit(function() {
 				event.preventDefault()
+
+				if ($('#player-name').val() == '') {
+					$('#player-name').tooltip('show')
+					return
+				}
 
 				$('#first-page').slideUp(function() {
 					$('#second-page').slideDown(function() {
