--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
 			<p class="text-center" id="back-to-page">回粉絲專頁參與抽獎!</p>
 			<p class="text-center" id="page-link"><a href="https://www.facebook.com/nctufl105/"><img id="FB-img" src="img/FB.png">交大外文105級畢業公演《緣來愛上你》</p></a>
 		</div>
+
+		<div class="row">
+			<div class="col-sm-2 col-sm-offset-9 col-xs-4 col-xs-offset-4">
+				<img src="img/polka_cc.jpg" class="img-responsive">
+			</div>
+		</div>
 	</div>
 
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
@@ -81,6 +87,7 @@
 		$(document).ready(function() {
 			$('#second-page, #third-page').hide()
 			cardGame.prepare()
+
 			$('#player-name').tooltip({
 				title: "請輸入您的名字",
 				trigger: "manual"
@@ -100,6 +107,10 @@
 					})
 				})
 			})
+
+			var music = $('<audio autoplay loop>').appendTo('body').html(
+				'<source src="music/Denis-Murphys-Polka_CC.mp3" type="audio/mp3">'
+			)[0].load()
 		})
 	</script>
 </body>
