--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 			<p class="text-center" id="are-matchmaker">記憶達人!&nbsp;&nbsp;You are the matchmaker!</p>
 			<p class="text-center" id="back-to-page">回粉絲專頁參與抽獎!</p>
 			<p class="text-center" id="page-link"><a href="https://www.facebook.com/nctufl105/"><img id="FB-img" src="img/FB.png">交大外文105級畢業公演《緣來愛上你》</p></a>
-		</div>
 
-		<div class="row">
-			<div class="col-sm-2 col-sm-offset-9 col-xs-4 col-xs-offset-4">
-				<img src="img/polka_cc.jpg" class="img-responsive">
+			<div class="row">
+				<div class="col-sm-2 col-sm-offset-9 col-xs-4 col-xs-offset-4" id="polka">
+					<img src="img/polka_cc.png" class="img-responsive">
+				</div>
 			</div>
 		</div>
 	</div>
