--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 			<p class="text-center" id="finish-mission">以<span id="result-second">25</span>秒完成任務</p>
 			<p class="text-center" id="are-matchmaker">記憶達人!&nbsp;&nbsp;You are the matchmaker!</p>
 			<p class="text-center" id="back-to-page">回粉絲專頁參與抽獎!</p>
+			<p class="text-center"><a class="btn btn-success" id="grade-download" download="matchmaker.jpg" target="_blank">下載我的成績單</a></p>
 			<p class="text-center" id="page-link"><a href="https://www.facebook.com/nctufl105/"><img id="FB-img" src="img/FB.png">交大外文105級畢業公演《緣來愛上你》</p></a>
 
 			<div class="row">
